--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <input type="submit" name="" value="">
   </form>
 <hr>
-<a href="contact.html">Contact</a>
+<a href="Contact.html">Contact</a>
 </body>
 
 </html>
